<resources>
    <string name="app_name">in10m Pro</string>
    <string name="google_maps_key">AIzaSyA1oJ2nAVOpAVJGvop7tBcv1GBJCp0vgBY</string>
    <string name="calling_app_key" translatable="false">50ccf3af-5f40-4731-9b5d-10b5b56a4b40</string>
    <string name="calling_app_secret" translatable="false">CxIAwF+cR0Gr71n8muNXIg==</string>
    <string name="calling_env_host" translatable="false">clientapi.sinch.com</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">SIGN IN</string>
    <string name="otp_help">We have sent 6 digit OTP to the number 09876 54321</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">VERIFY</string>
    <string name="setup_profile">SETUP PROFILE</string>
    <string name="name">Name</string>
    <string name="email">EMAIL</string>
    <string name="referal_promo">Referral / Promo Code</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="my_account">My Account</string>
    <string name="company_pros">Company Pros</string>
    <string name="service_history">Service History</string>
    <string name="my_bookings">My Orders</string>
    <string name="my_earnings">Earnings</string>
    <string name="pay_subcrption">Pay Subscription</string>
    <string name="about">About the app</string>
    <string name="privacy">Privacy &amp; Policy</string>
    <string name="contact">Contact us</string>
    <string name="settings">Settings</string>
    <string name="enter_personal_details">Enter your personal details</string>
    <string name="legal_name">Legal Name</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="enter_your_name_exactly">*Enter your name exactly as it appears on your government-issued ID.</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_caps">DATE OF BIRTH</string>
    <string name="home_address">Home Address</string>
    <string name="company_address">Company Address</string>
    <string name="company_name">COMPANY NAME</string>
    <string name="confirm_address_min">Confirm Address</string>
    <string name="street_address">ADDRESS</string>
    <string name="suite">SUITE OR APT. NUMBER</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="zip_code">ZIP CODE</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="governorate0">Al-Ahmadi</string>
    <string name="governorate1">Al-Farwaniya</string>
    <string name="governorate2">Hawalli</string>
    <string name="governorate3">Jahra</string>
    <string name="governorate4">Mubarak Al-Kabeer</string>
    <string name="governorate5">Al Asimah</string>
    <string-array name="nav_titles">
        <item>@string/my_account</item>
        <item>@string/my_bookings</item>
        <item>@string/pay_subcrption</item>
        <item>@string/about</item>
        <item>@string/privacy</item>
        <item>@string/contact</item>
        <item>@string/language</item>
        <item>@string/log_out</item>
    </string-array>
    <string-array name="nav_title">
        <item>@string/my_account</item>
        <item>@string/company_pros</item>
        <item>@string/my_bookings</item>
        <item>@string/pay_subcrption</item>
        <item>@string/about</item>
        <item>@string/privacy</item>
        <item>@string/contact</item>
        <item>@string/language</item>
        <item>@string/log_out</item>
    </string-array>
    <string name="upcoming">Upcoming</string>
    <string name="all">All</string>
    <string name="favorite">Favorites</string>
    <string name="past_bookings">Past Bookings</string>
    <string name="when_a_friend_rides_with_your_code_you_earn">When a friend rides with your code, you earn</string>
    <string name="share_via">Share via</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="sms">SMS</string>
    <string name="language">Language</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="about_wagon">About Wagon</string>
    <string name="rate_us_in_app_store">Rate us in Play Store</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="follow_us_on_twitter">Follow us on Twitter</string>
    <string name="legal">Legal</string>
    <string name="terms_and_conditions"><u>Terms &amp; conditions</u></string>
    <string name="terms_and_conditions1">Terms &amp; conditions</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>
    <string name="links">Links</string>
    <string name="fb_link">https://www.facebook.com/wagonkw</string>
    <string name="twitter_link">https://www.twitter.com/wagonkw</string>
    <string name="profile">Profile</string>
    <string name="save">SAVE</string>
    <string name="fare_details">FARE DETAILS</string>
    <string name="small_car">Small Car</string>
    <string name="half_lorry">Half Lorry</string>
    <string name="truck">Truck</string>
    <string name="base_fare">Base Fare</string>
    <string name="evening_charges">Evening Charges</string>
    <string name="night_charges">Night Charges</string>
    <string name="waiting_fare_per_hour">Waiting fare per hour</string>
    <string name="cancellation_fare">Cancellation Fare</string>
    <string name="above_10_miles">Above (10 miles)</string>
    <string name="below_25_miles">Below (25 miles)</string>
    <string name="minute_fare_10_miles">Minute Fare (10 miles)</string>
    <string name="minimum_fare_10_miles">Minimum Fare (10 miles)</string>
    <string name="confirm">CONFIRM</string>
    <string name="dummy_loc">90 White Spur Apt. 125</string>
    <string name="select_a_location_on_map_manually">Select a location on map manually</string>
    <string name="enter_a_location_manually">Enter a location manually</string>
    <string name="enter_address">ENTER ADDRESS</string>
    <string name="enter_the_address_and_we_will_do_the_rest">Enter the address and we will do the rest</string>
    <string name="building_name">Building Name</string>
    <string name="location_landmark">LANDMARK</string>
    <string name="city_name">City Name</string>
    <string name="pin_code">ZIPCODE</string>
    <string name="confirm_address">CONFIRM ADDRESS</string>
    <string name="smallcar_weight_limit">50kgs\nlimit</string>
    <string name="vehicle_details">VEHICLE DETAILS</string>
    <string name="weight_limit">Weight Limit</string>
    <string name="total_fare">Total Fare</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="done">DONE</string>
    <string name="item_details">ITEM DETAILS</string>
    <string name="quick_info">Quick Info</string>
    <string name="item_name">Item Name</string>
    <string name="value_of_the_item">Value of the item</string>
    <string name="instructions">Instructions</string>
    <string name="how_big_is_it">How Big is it ?</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="x_large">X-Large</string>
    <string name="how_would_you_like_to_handle_it">How would you like to handle it\n(optional)</string>
    <string name="bag">Bag</string>
    <string name="fragile">Fragile</string>
    <string name="cold">Cold</string>
    <string name="extra_help">Extra Help</string>
    <string name="receiver_name">Receiver/Sender Name</string>
    <string name="receiver_number">Receiver/Sender Contact Number</string>
    <string name="personal_card">Personal Card</string>
    <string name="save_as_default_card">Save as Default Card</string>
    <string name="name_as_on_card">Name as on card</string>
    <string name="save_card_details">SAVE CARD DETAILS</string>
    <string name="pickup_location_transition">location</string>
    <string name="wagon_image_transition">wagon_image</string>
    <string name="wagon_name_transition">wagon_name</string>
    <string name="hello_start_by_selecting_a_service_below">Hello, start by selecting a service below</string>
    <string name="select_sub_service">Select sub service</string>
    <string name="_23_professionals_available_nearby">23 Professionals available nearby</string>
    <string name="plumbing">Plumbing</string>
    <string name="sub_service">Sub Service : </string>
    <string name="sink">Sink</string>
    <string name="show_on_map">Show on map</string>
    <string name="more_info">More Info</string>
    <string name="age">AGE</string>
    <string name="total_experience">Year of Experience</string>
    <string name="total_experience2">TOTAL EXPERIENCE</string>
    <string name="other_skills">Other Skills</string>
    <string name="people_review">People’s Review</string>
    <string name="cancel_booking">cancel booking</string>
    <string name="call_now">Call Now</string>
    <string name="your_serviceman_is_starting_his_journey">Your Serviceman is starting his journey</string>
    <string name="help_us_with_your_correct_location">Help us with your correct address location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="signin_required">Sign in Required</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="enter">Enter</string>
    <string name="ote_verification">OTP Verification</string>
    <string name="all_set">All Set !</string>
    <string name="book_your_service_now">Book your first service now</string>
    <string name="additional_details">Additional Details</string>
    <string name="personal_info">Personal Info</string>
    <string name="full_name">FULL NAME</string>
    <string name="address_details">Address Details (Optional)</string>
    <string name="appartment_name">APARTMENT NAME</string>
    <string name="street_name">STREET NAME</string>
    <string name="book_now">Book Now</string>
    <string name="eta">ETA: <b>12 mins</b></string>
    <string name="rate_review"><![CDATA[Rate & Review]]></string>
    <string name="how_was_the_service">How was the service ?</string>
    <string name="short_note">Short Note</string>
    <string name="description">Description</string>
    <string name="submit">SUBMIT</string>
    <string name="select_language">Select language</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="we_have_your_back">We have your back</string>
    <string name="our_expert_support_team">Our expert support team are ready \n24/7 to assist you in times of need</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="skip1">عربي</string>
    <string name="skip2">English</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="an_otp_has_been">An OTP has been sent to the \nregistered number 32****32</string>
    <string name="intro_heading_one">You are on the map</string>
    <string name="intro_info_one">Near by to offer your service</string>
    <string name="intro_heading_one1">أنت على الخريطة</string>
    <string name="intro_info_one1">قريب جدا لتقديم خدمتك</string>
    <string name="intro_heading_two">Any time you like</string>
    <string name="intro_info_two">Get job when you are looking for one</string>
    <string name="dob">DATE OF BIRTH</string>
    <string name="email_id">EMAIL ID</string>
    <string name="working_as">WORKING AS</string>
    <string name="enter_your_basic_details">Enter your basic details</string>
    <string name="gender">GENDER</string>
    <string name="company_details">Company Details</string>
</resources>