<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.in10mServiceMan.widgets.textview.CustomRegularTextView
            android:id="@+id/personalDetailsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/enter_personal_details"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.in10mServiceMan.widgets.textview.CustomRegularTextView
            android:id="@+id/personalDetailsLegal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/legal_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/personalDetailsHeader"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsHeader" />

        <com.in10mServiceMan.widgets.edittext.CustomBookEditTextView
            android:id="@+id/personalDetailsFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorLight"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:theme="@style/EditTextHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsLegal" />

        <com.in10mServiceMan.widgets.edittext.CustomBookEditTextView
            android:id="@+id/personalDetailsLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorLight"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:theme="@style/EditTextHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsFirstName" />

        <com.in10mServiceMan.widgets.textview.CustomRegularTextView
            android:id="@+id/personalDetailsCaution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/enter_your_name_exactly"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="@+id/personalDetailsLastName"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsLastName" />

        <com.in10mServiceMan.widgets.textview.CustomRegularTextView
            android:id="@+id/personalDetailsdob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/date_of_birth"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/personalDetailsCaution"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsCaution" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/personalDetailsDOB1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorLight"
            android:paddingStart="10dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:theme="@style/CalendarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsdob">

            <com.in10mServiceMan.widgets.textview.CustomBookTextView
                android:id="@+id/personalDetailsLastDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLight"
                android:drawableEnd="@drawable/dropdown_arrow"
                android:gravity="center_vertical"
                android:hint="@string/date_of_birth_caps"
                android:inputType="date"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:textAllCaps="true"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv11" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.in10mServiceMan.widgets.textview.CustomRegularTextView
            android:id="@+id/personalDetailsCompanyDetailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/company_details"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/personalDetailsDOB1"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsDOB1" />

        <com.in10mServiceMan.widgets.edittext.CustomBookEditTextView
            android:id="@+id/personalDetailsCompanyET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorLight"
            android:hint="@string/company_name"
            android:inputType="text"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            android:textColorHint="@color/colorPrimary"
            android:textSize="14sp"
            android:theme="@style/EditTextHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsCompanyDetailsTV" />

        <com.in10mServiceMan.widgets.textview.CustomRegularTextView
            android:id="@+id/personalDetailsHomeAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/company_address"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/personalDetailsDOB1"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsCompanyET" />

        <com.in10mServiceMan.widgets.edittext.CustomBookEditTextView
            android:id="@+id/personalDetailsLastStreetAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorLight"
            android:hint="@string/street_address"
            android:inputType="text"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:theme="@style/EditTextHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsHomeAddress" />

        <com.in10mServiceMan.widgets.edittext.CustomBookEditTextView
            android:id="@+id/personalDetailsLastSuite"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorLight"
            android:hint="@string/suite"
            android:inputType="text"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:theme="@style/EditTextHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsLastStreetAddress" />

        <com.in10mServiceMan.widgets.edittext.CustomBookEditTextView
            android:id="@+id/personalDetailsStreetAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorLight"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:theme="@style/EditTextHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsLastSuite" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/txt_view_state"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/gradient_spinner"
            android:hint="@string/state"
            android:paddingStart="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/personalDetailsStreetAddress"
            app:layout_constraintStart_toStartOf="@+id/personalDetailsStreetAddress"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsStreetAddress" />

        <com.in10mServiceMan.widgets.edittext.CustomBookEditTextView
            android:id="@+id/personalDetailsZip"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorLight"
            android:hint="@string/zip_code"
            android:inputType="number"
            android:maxLength="5"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:theme="@style/EditTextHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_view_state" />

        <ImageView
            android:id="@+id/signUpPhaseDetailsOkTickIV"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/darktickbubble"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalDetailsZip" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

