<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:animateLayoutChanges="true"
    >


    <ImageView
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:elevation="3dp"
        android:padding="@dimen/_10sdp"
        android:foregroundGravity="center"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_close"
        android:layout_marginTop="@dimen/_20sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        >

        <TextView
            android:id="@+id/txt_view_basic_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="@font/diavlo_light"
            android:text="@string/enter_your_basic_details"
            android:textSize="@dimen/_20sdp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/et_bg"
                android:fontFamily="@font/diavlo_light"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dob"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_10sdp"
            android:inputType="number"
            android:fontFamily="@font/diavlo_light"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/et_bg"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_10sdp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:fontFamily="@font/diavlo_light"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/et_bg"/>

        </com.google.android.material.textfield.TextInputLayout>

        <AutoCompleteTextView
            android:id="@+id/autocomplete_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_7sdp"
            android:drawableRight="@drawable/ic_done_white"
            android:background="@drawable/et_bg"
            android:hint="@string/gender"
            />

        <AutoCompleteTextView
            android:id="@+id/autocomplete_working_as"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_7sdp"
            android:drawableRight="@drawable/ic_done_white"
            android:background="@drawable/et_bg"
            android:hint="@string/working_as"
            />

        <ImageView
            android:id="@+id/img_view_done"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/darktickbubble"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"/>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>