<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.in10mServiceMan.ui.activities.sign_in.SignInActivity">

    <include
        android:id="@+id/appBar" layout="@layout/app_bar_center_title"/>

    <ImageView
        android:id="@+id/logoIV"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/ic_wagon_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/diavlo_bold"
        android:letterSpacing=".2"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoIV" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/otpHelpTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/otp_help"
        android:textColor="@color/darkGreyText"
        app:layout_constraintTop_toBottomOf="@+id/appNameTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textSize="16sp"
        android:lineSpacingMultiplier="1.1"
        android:fontFamily="@font/diavlo_bold"
        android:letterSpacing="0.02"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phoneNumberET"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/et_bg"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_mobile"
        android:fontFamily="@font/diavlo_bold"
        android:hint="@string/otp"
        android:inputType="number"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/darkGreyText"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpHelpTV" />


    <com.in10mServiceMan.ui.custom_views.WagonButton
        android:id="@+id/verifyOtpCL"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:button_text="@string/verify_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberET" />

</androidx.constraintlayout.widget.ConstraintLayout>
